# rustbot

./: Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: main.rs
config_reader/: Cargo.toml
config_reader/src/: lib.rs
content/: global.db  global.ini
datab/: Cargo.toml
datab/src/: lib.rs
