[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config_reader = {path = "../config_reader"}
datab = {path = "../datab"}

serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "cache"]}
tokio = {version = "1.14.0", features = ["macros", "rt-multi-thread"]}
